# Project_AP_doodle_jump

./: .clang-format  CMakeLists.txt  README.md
Documentation/Doxygen/html/: Camera_8cpp_source.html  Camera_8h_source.html  ConcreteFactory_8cpp_source.html  ControllingPointers_8h_source.html  EntityFactory_8cpp_source.html  EntityModel_8cpp_source.html  EntityModel_8h_source.html  EntityView_8cpp_source.html  EntityView_8h_source.html  Exceptions_8cpp_source.html  Exceptions_8h_source.html  Game_8cpp_source.html  Game_8h_source.html  Game__Representation_2BG__Tile_8h_source.html  Game__Representation_2Platform_8cpp_source.html  Game__Representation_2Player_8cpp_source.html  Game__Representation_2Player_8h_source.html  Logic__libary_2BG__Tile_8cpp_source.html  Logic__libary_2BG__Tile_8h_source.html  Logic__libary_2Bonus_8cpp_source.html  Logic__libary_2Bonus_8h_source.html  Logic__libary_2Platform_8cpp_source.html  Logic__libary_2Platform_8h_source.html  Logic__libary_2Player_8cpp_source.html  Observer_8cpp_source.html  Observer_8h_source.html  Random_8cpp_source.html  Random_8h_source.html  Score_8cpp_source.html  Score__L_8cpp_source.html  Score__L_8h_source.html  Stopwatch_8cpp_source.html  Stopwatch_8h_source.html  Subject_8cpp_source.html  Subject_8h_source.html  Window_8cpp_source.html  Window_8h_source.html  World_8cpp_source.html  World_8h_source.html  classControllingPointers.html  (+174 more)
Documentation/Doxygen/latex/: classControllingPointers.tex  classInputException.tex  classInputFontException.tex  classInputImageException.tex  classInputSaveFileException.tex  classRepresentation_1_1ConcreteFactory.tex  classlogic_1_1BG__Tile__L__inherit__graph.md5  classlogic_1_1Bonus__L.tex  classlogic_1_1Bonus__L__coll__graph.md5  classlogic_1_1Bonus__L__inherit__graph.md5  classlogic_1_1Camera.tex  classlogic_1_1EntityFactory__inherit__graph.md5  classlogic_1_1EntityModel.tex  classlogic_1_1Observer__inherit__graph.md5  classlogic_1_1Platform__L.tex  classlogic_1_1Platform__L__coll__graph.md5  classlogic_1_1Platform__L__horizontal.tex  classlogic_1_1Platform__L__vertical.tex  classlogic_1_1Player__L__inherit__graph.md5  classlogic_1_1Random.tex  classlogic_1_1Score__L.tex  classlogic_1_1Score__L__coll__graph.dot  classlogic_1_1Score__L__inherit__graph.dot  classlogic_1_1Spring__L.tex  classlogic_1_1Stopwatch.tex  classlogic_1_1Subject__inherit__graph.md5  classnlohmann_1_1basic__json.tex  classnlohmann_1_1detail_1_1exception.tex  classnlohmann_1_1detail_1_1exception__coll__graph.dot  classnlohmann_1_1detail_1_1exception__inherit__graph.dot  classnlohmann_1_1detail_1_1file__input__adapter.tex  classnlohmann_1_1detail_1_1input__adapter.tex  classnlohmann_1_1detail_1_1input__stream__adapter.tex  classnlohmann_1_1detail_1_1input__stream__adapter__coll__graph.dot  classnlohmann_1_1detail_1_1invalid__iterator__inherit__graph.dot  classnullptrException.tex  classrepresentation_1_1ConcreteFactory.tex  classrepresentation_1_1EntityView.tex  classrepresentation_1_1Game.tex  classrepresentation_1_1Platform__coll__graph.md5  (+41 more)
Documentation/Doxygen/xml/: Camera_8cpp.xml  ConcreteFactory_8cpp.xml  EntityFactory_8cpp.xml  EntityModel_8h.xml  EntityView_8h.xml  Exceptions_8h.xml  Game__Representation_2BG__Tile_8cpp.xml  Game__Representation_2Bonus_8cpp.xml  Game__Representation_2Bonus_8h.xml  Game__Representation_2Platform_8cpp.xml  Game__Representation_2Platform_8h.xml  Game__Representation_2Player_8h.xml  (+38 more)
Save/: info.txt
source/: BG_Tile.cpp  BG_Tile.h  Bonus.cpp  Bonus.h  Entity.cpp  Entity.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Subject.cpp  Subject.h  main.cpp
src/: BG_Tile_L.cpp  BG_Tile_L.h  Bonus_L.cpp  Bonus_L.h  Entity_Model.cpp  Entity_Model.h  Exceptions.cpp  Exceptions.h  Observer.cpp  Observer.h  Platform_L.cpp  Platform_L.h  Player_L.cpp  Player_L.h  Subject.cpp  Subject.h  main.cpp
src/Game_Representation/: BG_Tile.cpp  BG_Tile.h  BG_TileFactory.cpp  BG_TileFactory.h  Bonus.cpp  Bonus.h  BonusFactory.cpp  BonusFactory.h  CMakeLists.txt  ConcreteFactory.cpp  ConcreteFactory.h  EntityView.cpp  EntityView.h  Entity_View.cpp  Entity_View.h  Game.cpp  Game.h  Model_View.cpp  Model_View.h  Platform.cpp  Platform.h  PlatformFactory.cpp  PlatformFactory.h  Player.cpp  Player.h  PlayerFactory.cpp  PlayerFactory.h  Score.cpp  Score.h  Window.cpp  Window.h
src/Logic_libary/: Abstract_Factory.cpp  Abstract_Factory.h  BG_Tile.cpp  BG_Tile.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Camera.cpp  Camera.h  Controlling.cpp  Controlling.h  ControllingPointers.cpp  ControllingPointers.h  Counter.cpp  Counter.h  EntityFactory.cpp  EntityFactory.h  EntityModel.cpp  EntityModel.h  Entity_Model.cpp  Entity_Model.h  Observer.cpp  Observer.h  Platform.cpp  Platform.h  Player.cpp  Player.h  Random.cpp  Random.h  Score.cpp  Score.h  Score_L.cpp  Score_L.h  Stopwatch.cpp  Stopwatch.h  Subject.cpp  Subject.h  World.cpp  World.h
(+137 files in other folders)
