add_library(representation
        EntityView.cpp
        Player.cpp
        Game.cpp
        Window.cpp
        Bonus.cpp
        BG_Tile.cpp
        Platform.cpp
        PlayerFactory.cpp PlayerFactory.h PlatformFactory.cpp PlatformFactory.h BG_TileFactory.cpp BG_TileFactory.h BonusFactory.cpp BonusFactory.h)