add_library(logic
        BG_Tile.cpp
        Bonus.cpp
        EntityModel.cpp
        Observer.cpp
        Platform.cpp
        Player.cpp
        Stopwatch.cpp
        Subject.cpp
        World.cpp
        EntityFactory.cpp
        Random.cpp Random.h Camera.cpp Camera.h Score_L.cpp Score_L.h ControllingPointers.cpp ControllingPointers.h)